--- a/app_server/views/partials/footer.hbs
+++ b/app_server/views/partials/footer.hbs
@@ -1,20 +1,36 @@
 <div id="footer">
     <div>
         <ul class="navigation">
-            <li><a href="/">Home</a></li>
-            <li><a href="/travel">Travel</a></li>
-            <li><a href="/rooms">Rooms</a></li>
-            <li><a href="/meals">Meals</a></li>
-            <li><a href="/news">News</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li {{#if home}}class="active"{{/if}}>
+                <a href="/">Home</a>
+            </li>
+            <li {{#if travel}}class="active"{{/if}}>
+                <a href="/travel">Travel</a>
+            </li>
+            <li {{#if rooms}}class="active"{{/if}}>
+                <a href="/rooms">Rooms</a>
+            </li>
+            <li {{#if meals}}class="active"{{/if}}>
+                <a href="/meals">Meals</a>
+            </li>
+            <li {{#if news}}class="active"{{/if}}>
+                <a href="/news">News</a>
+            </li>
+            <li {{#if about}}class="active"{{/if}}>
+                <a href="/about">About</a>
+            </li>
+            <li {{#if contact}}class="active"{{/if}}>
+                <a href="/contact">Contact</a>
+            </li>
         </ul>
         <div id="connect">
-            <a href="#" class="pinterest"></a>
-            <a href="#" class="facebook"></a>
-            <a href="#" class="twitter"></a>
-            <a href="#" class="googleplus"></a>
+            <a href="http://pinterest.com/fwtemplates/" target="_blank" class="pinterest"></a>
+            <a href="http://freewebsitetemplates.com/go/facebook/" target="_blank" class="facebook"></a>
+            <a href="http://freewebsitetemplates.com/go/twitter/" target="_blank" class="twitter"></a>
+            <a href="http://freewebsitetemplates.com/go/googleplus/" target="_blank" class="googleplus"></a>
         </div>
     </div>
-    <p>© {{year}} by Travlr Getaways. All Rights Reserved</p>
+    <p>
+        © {{year}} by Travlr Getaways. All Rights Reserved
+    </p>
 </div>
