--- a/app_server/views/partials/header.hbs
+++ b/app_server/views/partials/header.hbs
@@ -4,13 +4,27 @@
     </div>
     <div id="navigation">
         <ul>
-            <li><a href="/">Home</a></li>
-            <li><a href="/travel">Travel</a></li>
-            <li><a href="/rooms">Rooms</a></li>
-            <li><a href="/meals">Meals</a></li>
-            <li><a href="/news">News</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/contact">Contact</a></li>
+            <li {{#if home}}class="selected"{{/if}}>
+                <a href="/">Home</a>
+            </li>
+            <li {{#if travel}}class="selected"{{/if}}>
+                <a href="/travel">Travel</a>
+            </li>
+            <li {{#if rooms}}class="selected"{{/if}}>
+                <a href="/rooms">Rooms</a>
+            </li>
+            <li {{#if meals}}class="selected"{{/if}}>
+                <a href="/meals">Meals</a>
+            </li>
+            <li {{#if news}}class="selected"{{/if}}>
+                <a href="/news">News</a>
+            </li>
+            <li {{#if about}}class="selected"{{/if}}>
+                <a href="/about">About</a>
+            </li>
+            <li {{#if contact}}class="selected"{{/if}}>
+                <a href="/contact">Contact</a>
+            </li>
         </ul>
     </div>
 </div>
